Lab_5/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloring-web
spec:
  selector:
    app: cloring-web
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30080
