Lab_5/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloring-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: cloring.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloring-web
                port:
                  number: 5000
